# prefix-notation

./: .gitignore  README.md  main.py  pyproject.toml
src/: clean.py  config.py  evaluate.py  validate.py  variables.py
tests/: acceptance_test.py  unit_test.py
