[tool.poetry]
name = "prefix-notation"
version = "0.1.0"
description = ""
authors = ["Andrew Epps"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
black = "^21.7b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_functions = "it_*"
addopts = "-v"
testpaths = "tests"
python_files = "*_test.py"
